--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/p5.play@3/p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+    <title>Forest Adventures</title>
+    
 
   </head>
   <body>
+    
     <script src="scripts/dictionary.js"></script>
     <script src="scripts/loader.js"></script>
     <script src="scripts/scenes/buttonManager.js"></script>
