--- a/public/leaderBoard.html
+++ b/public/leaderBoard.html
@@ -3,12 +3,14 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Racing Master</title>
+       
+        <title>Forest Adventures</title>
 
         <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
         <link rel="stylesheet" href="css/style.css" />
         <script src="js/home.js"></script>
+        
     </head>
     <body>
         <div id="container">
